Fix print not loading on small screen

--- a/common/abstracts/_mixins.scss
+++ b/common/abstracts/_mixins.scss
@@ -16,3 +16,9 @@
     @content;
   }
 }
+
+@mixin breakpoint-max($breakpoint) {
+  @media (max-width: $breakpoint) {
+    @content;
+  }
+}
